styled the labels on the form

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -50,6 +50,7 @@ a, button
 
 label
  font-weight: bolder
+ font-size: 1.5vh
  color: $black
 
 button, input
@@ -95,5 +96,5 @@ footer
 .copyright
   position: absolute
   font-size: 2vh
-  bottom: 2vw
-  right: 2vw
+  bottom: 2vh
+  right: 2vh
