made foa different color and more responsive

--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -4,6 +4,9 @@
 // Image folder path
 $assetPath: "/assets/images"
 
+// Colors
+$purple: #0000cc
+
 main
   margin: 0 auto
   background: url(#{$assetPath}/airplane-taking-off.jpg)
@@ -11,6 +14,10 @@ main
   background-repeat: no-repeat
   background-size: cover
   min-width: 100%
+  opacity: 0.8
+
+label
+  color: $purple
   
 
 
