--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
 <br />
 <form class='login-form pt-3 pl-6'>
   <div>
-    <label for='email-login'>Email:</label>
+    <label for='email-login' class="is-size-6-mobile">Email:</label>
     <br />
     <input
       type='text'
@@ -16,14 +16,14 @@
     />
   </div>
   <div>
-    <label for='password-login'>Password:</label>
+    <label for='password-login' class="is-size-6-mobile">Password:</label>
     <br />
     <input type='password' id='password-login' placeholder='YourPassword' />
     <br>
   </div>
   <br />
   <div>
-    <button class='button btn-login' type='submit'><i
+    <button class='button btn-login class="is-size-6-mobile"' type='submit'><i
         class='icon-unlock icon-large pr-2'
       ></i>Login</button>
   </div>
@@ -33,19 +33,19 @@
 <!--SIGNUP FORM -->
 <form class='signup-form pl-6'>
   <div>
-    <label for='username-signup'>Username:</label>
+    <label for='username-signup' class="is-size-6-mobile">Username:</label>
     <br>
     <input type='text' id='username-signup' placeholder='janedoe' />
     <br />
   </div>
   <div>
-    <label for='email-signup'>Email:</label>
+    <label for='email-signup' class="is-size-6-mobile">Email:</label>
     <br>
     <input type='text' id='email-signup' placeholder='janedoe@gmail.com' />
     <br />
   </div>
   <div>
-    <label for='password-signup'>Password:</label>
+    <label for='password-signup' class="is-size-6-mobile">Password:</label>
     <br>
     <input type='password' id='password-signup' placeholder='YourPassword' />
     <br />
