--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,6 +1,10 @@
 /* BASE REUSABLE STYLESHEET */
-body, html {
+html, body {
   min-height: 100%;
+}
+
+#error-message {
+  color: white;
 }
 
 .wrapper {
@@ -10,37 +14,41 @@ body, html {
   margin: 0 auto;
 }
 
+h1 {
+  font-size: 4vh;
+  padding-right: 2vw;
+  display: inline-block;
+}
+
 nav {
   background-color: #ff3399;
   background-image: linear-gradient(to bottom, #0000cc 0%, #ff3399 100%);
   color: #ffffff;
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
+  background-size: 1px 400px;
   background-position: 0 -10px;
   padding: 2vh;
   min-width: 100vw;
-}
-
-h1, nav {
   display: inline-block;
 }
 
-a {
+a, button {
   text-decoration: none;
   font-weight: bold;
   color: #225ca3;
   transition: color 0.1s;
 }
-a:hover {
+a:hover, button:hover {
   font-weight: bold;
-  color: #ea0028;
 }
 
 label {
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: 1.5vh;
+  color: #000000;
 }
 
-button {
+button, input {
   border: 0;
   padding: 1%;
   font-weight: bold;
@@ -48,22 +56,23 @@ button {
   border-radius: 5px;
 }
 
-.btn-login, .btn-save, .btn-add, .btn-homepage {
+.btn-nav, .btn-login, .btn-save, .btn-add {
   background-color: #ff3399;
   background-image: linear-gradient(45deg, #ff3399 0%, #2bd2ff 52%, #2bff88 90%);
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
+  background-size: 1px 130px;
   background-position: 0 -10px;
 }
-.btn-login:hover, .btn-save:hover, .btn-add:hover, .btn-homepage:hover {
+.btn-nav:hover, .btn-login:hover, .btn-save:hover, .btn-add:hover {
   background-position: 1px -50px;
+  color: #ea0028;
 }
 
 .btn-delete, .btn-logout {
   background-color: #ea0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
   transition: all 0.5s ease-out;
-  background-size: 1px 100px;
+  background-size: 1px 130px;
   background-position: 0 -10px;
 }
 .btn-delete:hover, .btn-logout:hover {
@@ -71,14 +80,26 @@ button {
   color: #ffffff;
 }
 
+.btn-nav, .btn-logout {
+  margin-right: 1.5vw;
+  padding: 1vw;
+}
+
 footer {
-  font-weight: bold;
+  font-weight: bolder;
+  font-size: 3vh;
   height: 2vh;
   background-color: #ea0028;
   background-image: linear-gradient(180deg, #ff9a8b 0%, #ea0028 100%);
-  background-size: 1px 150px;
-  bottom: 0;
-  width: 100%;
+  background-size: 1px 350px;
+  position: relative;
+}
+
+.copyright {
+  position: absolute;
+  font-size: 2vh;
+  bottom: 2vh;
+  right: 2vh;
 }
 
 html {
