--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,10 @@
 <br />
 <form class='login-form pt-3 pl-6'>
   <div>
-    <label for='email-login' class="is-size-6-mobile">Email:</label>
+    <label
+      for='email-login'
+      class='is-size-6-mobile is-size-5-desktop'
+    >Email:</label>
     <br />
     <input
       type='text'
@@ -16,16 +19,20 @@
     />
   </div>
   <div>
-    <label for='password-login' class="is-size-6-mobile">Password:</label>
+    <label
+      for='password-login'
+      class='is-size-6-mobile is-size-5-desktop'
+    >Password:</label>
     <br />
     <input type='password' id='password-login' placeholder='YourPassword' />
-    <br>
+    <br />
   </div>
   <br />
   <div>
-    <button class='button btn-login class="is-size-6-mobile"' type='submit'><i
-        class='icon-unlock icon-large pr-2'
-      ></i>Login</button>
+    <button
+      class='button btn-login is-size-6-mobile is-size-6-desktop'
+      type='submit'
+    ><i class='icon-unlock icon-large pr-2'></i>Login</button>
   </div>
   <br />
 </form>
@@ -33,26 +40,32 @@
 <!--SIGNUP FORM -->
 <form class='signup-form pl-6'>
   <div>
-    <label for='username-signup' class="is-size-6-mobile">Username:</label>
-    <br>
+    <label
+      for='username-signup'
+      class='is-size-6-mobile is-size-5-desktop'
+    >Username:</label>
+    <br />
     <input type='text' id='username-signup' placeholder='janedoe' />
     <br />
   </div>
   <div>
-    <label for='email-signup' class="is-size-6-mobile">Email:</label>
-    <br>
+    <label
+      for='email-signup'
+      class='is-size-6-mobile is-size-5-desktop'
+    >Email:</label>
+    <br />
     <input type='text' id='email-signup' placeholder='janedoe@gmail.com' />
     <br />
   </div>
   <div>
-    <label for='password-signup' class="is-size-6-mobile">Password:</label>
-    <br>
+    <label for='password-signup' class='is-size-6-mobile is-size-5-desktop'>Password:</label>
+    <br />
     <input type='password' id='password-signup' placeholder='YourPassword' />
     <br />
   </div>
   <div>
     <br />
-    <button class='button btn-login' type='submit'><i
+    <button class='button btn-login is-size-6-mobile is-size-6-desktop' type='submit'><i
         class='icon-pencil icon-large pr-2'
       ></i>Signup</button>
   </div>
