moved buttons so datepicker can show and fixed space bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,4 +82,16 @@ footer {
   width: 100%;
 }
 
+#btnSection{
+ margin-bottom: 25px;
+ margin-left: 80px;
+  
+}
+
+#btnSection{
+  margin-bottom: 25px;
+  margin-left: 80px;
+   
+ }
+
 /*# sourceMappingURL=style.css.map */
