create dashboard page

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -52,7 +52,7 @@ button
   curser: pointer
   border-radius: 5px
 
-.btn-login, .btn-save, .btn-add, .btn-homepage
+.btn-login, .btn-save, .btn-add, .btn-homepage, .btn-dashboard
   background-color: $pink
   background-image: linear-gradient(45deg, $pink 0%, $sky-blue 52%, $light-green 90%)
   transition: all .5s ease-out
