--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
           Travel Lovers
         </h1>
         <button class='btn-homepage'><a href='/'>Homepage</a></button>
+        <button class='btn-dashboard'><a href='/dashboard'>Dashboard</a></button>
         {{#if loggedIn}}
           <button id='logout' class='btn-logout'>Logout</button>
           <div id='error-message'></div>
