--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,27 +1,17 @@
 <div class="container">
     <div class="board">
         <div class="block" id="bucketlist">
-            <h1>Bucketlist</h1>
+          <a href="/bucketlist/">Bucketlist</a>
         </div>
         <div class="block" id="visiting">
-            <h1>Visiting</h1>
+          <a href="/visiting/">Visiting</a>
         </div>
         <div class="block" id="visited">
-            <h1>Visited</h1>
-        </div>
-         <div class="block" id="bucket-list">
-            <a href="/bucket-list">bucket-list</a>
+          <a href="/visited/">Visited</a>
         </div>
         <div class="block" id="dashboard">
-            <a href="/dashboard">dashboard</a>
+            <a href="/dashboard/">dashboard</a>
         </div>
 
 
-  <div>
-    {{#each places}}
-      <div>
-        City
-        {{city}}
-      </div>
-    {{/each}}
-  </div>
+  
