made the homepage and dashboard more responsive

--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -10,7 +10,7 @@ $purple: #0000cc
 main
   margin: 0 auto
   background: url(#{$assetPath}/airplane-taking-off.jpg)
-  background-postition: center
+  background-position: center
   background-repeat: no-repeat
   background-size: cover
   min-width: 100%
