--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -109,4 +109,6 @@ footer {
   right: 2vh;
 }
 
-/*# sourceMappingURL=style.css.map */
+/* DASHBOARD STYLES */
+
+/*# sourceMappingURL=dashboard.css.map */
