--- a/views/bucketlist.handlebars
+++ b/views/bucketlist.handlebars
@@ -1,5 +1,8 @@
+<head>
+  <link rel='stylesheet' href='/stylesheets/dashboard.css' />
+</head>
 <div>
-  <a href="/dashboard/bucketlist/new">➕ New Post</a>
+  <a href="/dashboard/bucketlist/new"><i class='icon-plus pr-2'></i> New Post</a>
 </div>
 <div class="posts list-group">
     {{#each bucketlist_posts}}
