--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,8 @@
-<div class="container">
-    <div class="board">
-        <div class="block" id="bucketlist">
-          <a href="/bucketlist/">Bucketlist</a>
-        </div>
-        <div class="block" id="visiting">
-          <a href="/visiting/">Visiting</a>
-        </div>
-        <div class="block" id="visited">
-          <a href="/visited/">Visited</a>
-        </div>
-        <div class="block" id="dashboard">
-            <a href="/dashboard/">dashboard</a>
-        </div>
+<head>
+  <link rel='stylesheet' href='stylesheets/homepage.css' />
+</head>
+
+
 
 
   
