--- a/views/traveling.handlebars
+++ b/views/traveling.handlebars
@@ -1,5 +1,5 @@
 <div>
-  <a href="/dashboard/bucketlist/new">➕ New Post</a>
+  <a href="/dashboard/bucketlist/new"><i class='icon-plus pr-2'></i> New Post</a>
 </div>
 <div class="posts list-group">
     {{#each traveling_posts}}
