--- a/public/sass/homepage.sass
+++ b/public/sass/homepage.sass
@@ -1,9 +1,11 @@
+/* HOMEPAGE STYLES */
 @use 'style'
 
 $assetPath: "/assets/images"
 
-html
+main
     background: url(#{$assetPath}/homepage.jpg)
     background-position: center
     background-repeat: no-repeat
     background-size: cover
+    min-width: 100%
