--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,18 +36,18 @@
           <div class='navbar-item'>
             <div id='error-message' class='p-5'></div>
             <div class='buttons'>
-              <a href='/'><button class='button btn-nav'><i
+              <a href='/'><button class='btn-nav'><i
                     class='icon-home icon-large pr-2'
                   ></i>Homepage</button></a>
               {{#if loggedIn}}
-                <a href='/dashboard'><button class='button btn-nav'><i
-                      class='icon-plane icon-large pr-2'
+                <a href='/dashboard'><button class='btn-nav'><i
+                      class='icon-calendar icon-large pr-2'
                     ></i>Dashboard</button></a>
-                <button id='logout' class='button btn-logout'><i
+                <button id='logout' class='btn-logout'><i
                     class='icon-lock icon-large pr-2'
                   ></i>Logout</button>
               {{else}}
-                <a href='/login'><button class='button btn-nav'><i
+                <a href='/login'><button class='btn-nav'><i
                       class='icon-unlock icon-large pr-2'
                     ></i>Login</button></a>
               {{/if}}
