--- a/views/lifestyle.handlebars
+++ b/views/lifestyle.handlebars
@@ -1,13 +1,16 @@
 <div>
-  <a href="/dashboard/bucketlist/new">➕ New Post</a>
+  <a href='/dashboard/bucketlist/new'> New Post </i></a>
 </div>
-<div class="posts list-group">
-    {{#each lifestyle_posts}}
-  <a class="list-item flex-row justify-space-between" href="/dashboard//edit/{{posts.id}}">
-    <span>{{title}}</span>
-    <span>{{author}}</span>
-    <div>{{body}}</div>
-  </a>
+<div class='posts list-group'>
+  {{#each lifestyle_posts}}
+    <a
+      class='list-item flex-row justify-space-between'
+      href='/dashboard//edit/{{posts.id}}'
+    >
+      <span>{{title}}</span>
+      <span>{{author}}</span>
+      <div>{{body}}</div>
+    </a>
   {{/each}}
 </div>
 
