trying to add logic to hide buttons when there's no value in the text areas/input

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -18,9 +18,9 @@
                 <p>Bucketlist</p>
             </div>
             <div class="message-body">
-                <input placeholder="City" type="text" id="candidate"/>
+                <input name="citytxt" placeholder="City" type="text" id="candidate"/>
                     <br>
-                <input placeholder="Date" type="text" id="datepicker">
+                <input name="datetxt" placeholder="Date" type="text" id="datepicker">
                     <br>
                     <br>
                 <div id="btnSection">
