used SASS for CSS on button

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -81,3 +81,12 @@ footer
   position: absolute
   bottom: 0
   width: 100%
+
+#btnSection
+ margin-bottom: 25px
+ margin-left: 80px
+  
+
+#btnSection
+  margin-bottom: 25px
+  margin-left: 80px
