--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>bulma cards</title>
-        <link rel='stylesheet' href="../stylesheets/style.css" href='https://unpkg.com/bulma@0.9.0/css/bulma.min.css'>
+        <link rel='stylesheet' href='https://unpkg.com/bulma@0.9.0/css/bulma.min.css'>
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     </head>
     <body>
