added icons to the visited page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,13 +19,13 @@
         ></i>
             </div>
             <div class="message-body">
-                <input name="citytxt" placeholder="City" type="text" id="candidate"/>
+                <i class="icon-building"></i><input name="citytxt" placeholder="City" type="text" id="candidate"/>
                     <br>
                 <i class="icon-calendar"></i><input placeholder="Date" type="text" id="datepicker">
                     
                 <div id="btnSection">
-                    <button id="button-1" onclick="addItem()"><i class="icon-plus-sign-alt"></i>Add</button>
-                    <button id="button-2" onclick="removeItem()">Remove</button>
+                    <button id="button-1" onclick="addItem()"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
+                    <button id="button-2" onclick="removeItem()"><i class="icon-remove pr-1"></i>Remove</button>
                 </div>
                 <div>
                     <ul id="dynamic-list"></ul>
@@ -41,12 +41,12 @@
                 <p>Visiting</p><i class="icon-ticket"></i>
             </div>
             <div class="message-body">
-                <input placeholder="City" type="text" id="candidate1"/>
+                <i class="icon-building"></i><input placeholder="City" type="text" id="candidate1"/>
                 <br>
                 <i class="icon-calendar"></i><input placeholder="Date" type="text" id="datepicker1">
                 <div id="btnSection">
-                  <button onclick="addItem1()"><i class="icon-plus-sign-alt"></i>Add</button>
-                  <button onclick="removeItem1()">Remove</button>
+                  <button onclick="addItem1()"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
+                  <button onclick="removeItem1()"><i class="icon-remove pr-1"></i>Remove</button>
                 </div>
             
                 <ul id="dynamic-list1"></ul>
@@ -58,15 +58,15 @@
     <div class="column is-wide">
         <article class="message is-link">
             <div class="message-header">
-                <p>Visited</p>
+                <p>Visited</p><i class="icon-plane"></i>
             </div>
             <div class="message-body">
-                <input placeholder="City" type="text" id="candidate2"/>
+                <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate2"/>
                 <br>
                 <i class="icon-calendar"></i><input placeholder="Date" type="text" id="datepicker2">
                 <div id="btnSection"> 
-                    <button onclick="addItem2()"><i class="icon-plus-sign-alt"></i>Add</button>
-                    <button onclick="removeItem2()">Remove</button>
+                    <button onclick="addItem2()"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
+                    <button onclick="removeItem2()"><i class="icon-remove pr-1"></i>Remove</button>
                 </div>
             <div>
                 <ul id="dynamic-list2"></ul>
