--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,9 @@
           <div class='navbar-item'>
             <div id='error-message' class='p-5'></div>
             <div class='buttons'>
+              <a href='/'><button class='btn-nav'><i
+                    class='icon-home icon-large pr-2'
+                  ></i>Homepage</button></a>
               {{#if loggedIn}}
                 <a href='/dashboard'><button class='btn-nav'><i
                       class='icon-calendar icon-large pr-2'
