--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,7 +64,7 @@
       <div class='content has-text-centered'>
         Thanks for visiting!
       </div>
-      <div class='copyright is-size-6-mobile'>
+      <div class='copyright is-size-6-mobile has-text-right'>
         <h2>Made by Travel Lovers</h2>
         <div>&copy; 2022 Travel Lovers, Inc.</div>
       </div>
