--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,11 +2,11 @@
   <link rel='stylesheet' href='/stylesheets/login.css' />
 </head>
 
-<div class='form-container wrapper is-flex is-justify-content-center is-align-items-center'>
+<div
+  class='form-container wrapper is-flex is-justify-content-center is-align-items-center'
+>
   <!--LOGIN FORM -->
-  <form
-    class='login-form pt-3 pl-6 pb-3 pr-6 '
-  >
+  <form class='login-form pt-3 pl-6 pb-3 pr-6'>
     <div>
       <label
         for='email-login'
@@ -14,6 +14,7 @@
       >Email:</label>
       <br />
       <input
+        class='input is-info'
         type='text'
         id='email-login'
         placeholder='janedoe@email.com'
@@ -26,7 +27,7 @@
         class='is-size-6-mobile is-size-5-desktop'
       >Password:</label>
       <br />
-      <input type='password' id='password-login' placeholder='YourPassword' />
+      <input class="input is-info" type='password' id='password-login' placeholder='YourPassword' />
       <br />
     </div>
     <br />
@@ -37,20 +38,27 @@
       ><i class='icon-unlock icon-large pr-2'></i>Login</button>
     </div>
     <br />
-    <h6>Need to create account?
-      <button id='create-account'>Click Here!</button></h6>
+    <h6><b>Need to create account?</b>
+      <button id='create-account' class="btn-nav"><i class="icon-user pr-2"></i>Click Here!</button></h6>
   </form>
 
   <!--SIGNUP FORM -->
   <form class='signup-form pl-6 pt-3 pb-3 pr-6' style='display:none'>
-    <span><i class="icon-remove"></i></span>
+    <i
+      class='icon-remove-sign icon-large is-flex is-justify-content-flex-end icon-remove-styles'
+    ></i>
     <div>
       <label
         for='username-signup'
         class='is-size-6-mobile is-size-5-desktop'
       >Username:</label>
       <br />
-      <input type='text' id='username-signup' placeholder='janedoe' />
+      <input
+        class='input is-info'
+        type='text'
+        id='username-signup'
+        placeholder='janedoe'
+      />
       <br />
     </div>
     <div>
@@ -59,7 +67,12 @@
         class='is-size-6-mobile is-size-5-desktop'
       >Email:</label>
       <br />
-      <input type='text' id='email-signup' placeholder='janedoe@gmail.com' />
+      <input
+        class='input is-info'
+        type='text'
+        id='email-signup'
+        placeholder='janedoe@gmail.com'
+      />
       <br />
     </div>
     <div>
@@ -68,7 +81,7 @@
         class='is-size-6-mobile is-size-5-desktop'
       >Password:</label>
       <br />
-      <input type='password' id='password-signup' placeholder='YourPassword' />
+      <input class="input is-info" type='password' id='password-signup' placeholder='YourPassword' />
       <br />
     </div>
     <div>
