added box shadow to the form

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,7 +27,12 @@
         class='is-size-6-mobile is-size-5-desktop'
       >Password:</label>
       <br />
-      <input class="input is-info" type='password' id='password-login' placeholder='YourPassword' />
+      <input
+        class='input is-info'
+        type='password'
+        id='password-login'
+        placeholder='YourPassword'
+      />
       <br />
     </div>
     <br />
@@ -39,7 +44,9 @@
     </div>
     <br />
     <h6><b>Need to create account?</b>
-      <button id='create-account' class="btn-nav"><i class="icon-user pr-2"></i>Click Here!</button></h6>
+      <button id='create-account' class='btn-nav'><i
+          class='icon-user pr-2'
+        ></i>Click Here!</button></h6>
   </form>
 
   <!--SIGNUP FORM -->
@@ -81,7 +88,12 @@
         class='is-size-6-mobile is-size-5-desktop'
       >Password:</label>
       <br />
-      <input class="input is-info" type='password' id='password-signup' placeholder='YourPassword' />
+      <input
+        class='input is-info'
+        type='password'
+        id='password-signup'
+        placeholder='YourPassword'
+      />
       <br />
     </div>
     <div>
