--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -6,6 +6,7 @@ $assetPath: "/assets/images"
 
 // Colors
 $purple: #0000cc
+$amber: #ffaa4d
 
 main
   margin: 0 auto
@@ -22,9 +23,12 @@ label
 
 form 
   border: 1px solid black
-  background-color: white
+  background-color: $amber
+  opacity: .9
+  box-shadow: 0 0 10px rgb(0 0 0 / 96%)
+  border-radius: 15px
 
-icon-remove-styles
+.icon-remove-styles
   cursor: pointer  
 
 
