--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -139,10 +139,13 @@ label {
 
 form {
   border: 1px solid black;
-  background-color: white;
+  background-color: #ffaa4d;
+  opacity: 0.9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.96);
+  border-radius: 15px;
 }
 
-icon-remove-styles {
+.icon-remove-styles {
   cursor: pointer;
 }
 
