styled buttons on dashboard

--- a/public/sass/dashboard.sass
+++ b/public/sass/dashboard.sass
@@ -1,2 +1,14 @@
 /* DASHBOARD STYLES */
 @use 'style'
+
+$assetPath: "/assets/images"
+
+main
+    background: url(#{$assetPath}/homepage.jpg)
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
+    min-width: 100%
+    width: 100%
+    min-height: 100%
+    margin: 0 auto
