--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -64,7 +64,7 @@ button
   cursor: pointer
   border-radius: 5px
 
-.btn-nav, .btn-login, .btn-save, .btn-add
+.btn-nav, .btn-login, .btn-add
   background-color: $pink
   background-image: linear-gradient(45deg, $pink 0%, $sky-blue 52%, $light-green 90%)
   transition: all .5s ease-out
@@ -95,12 +95,13 @@ button
 footer
   font-weight: bolder
   font-size: 3vh
-  height: 2vh
   background-color: $red
   background-image: linear-gradient(180deg, $light-orange 0%, $red 100%)
   background-size: 1px 350px
+  clear: both
   position: relative
-  bottom: 0
+  height: 2vh
+
 
 .copyright
   position: absolute
