added new background image on dashboard

--- a/public/sass/dashboard.sass
+++ b/public/sass/dashboard.sass
@@ -4,7 +4,7 @@
 $assetPath: "/assets/images"
 
 main
-    background: url(#{$assetPath}/homepage.jpg)
+    background: url(#{$assetPath}/dashboard-image.png)
     background-position: center
     background-repeat: no-repeat
     background-size: cover
