--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -123,7 +123,7 @@ footer {
 
 /* DASHBOARD STYLES */
 main {
-  background: url(/assets/images/homepage.jpg);
+  background: url(/assets/images/dashboard-image.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
