styled the datepicker

--- a/public/sass/dashboard.sass
+++ b/public/sass/dashboard.sass
@@ -3,6 +3,10 @@
 
 $assetPath: "/assets/images"
 
+// Colors
+$amber: #ffaa4d
+$sky-blue: #2bd2ff
+
 main
     background: url(#{$assetPath}/dashboard-image.png)
     background-position: center
@@ -12,3 +16,10 @@ main
     width: 100%
     min-height: 100%
     margin: 0 auto
+
+.ui-datepicker
+  background-color: $amber
+
+.ui-datepicker-title
+  color: $sky-blue
+  font-weight: bold
