rounded the login button borders on the form

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -38,7 +38,7 @@
     <br />
     <div>
       <button
-        class='button btn-login is-size-6-mobile is-size-6-desktop'
+        class='btn-login is-size-6-mobile is-size-6-desktop'
         type='submit'
       ><i class='icon-unlock icon-large pr-2'></i>Login</button>
     </div>
