--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -122,8 +122,8 @@ footer {
 }
 
 /* HOMEPAGE STYLES */
-main {
-  background: url(/assets/images/homepage.jpg);
+.body {
+  background-image: url(/assets/images/homepage.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
