--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+{{!-- <!DOCTYPE html>
+<html lang="en">--}}
     <head>
         <meta charset="UTF-8">
         <title>bulma cards</title>
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    
+    
+  <link rel='stylesheet' href='stylesheets/dashboard.css' />
     </head>
     <body>
     <section class="container">
         <div class="level-item">
-        <div class="columns is-multiline is-centered cards-container" id="sectioncontainer">
+        <div class="columns is-multiline is-centered cards-container" id="sectioncontainer"> 
     
     {{!-- Card 1 --}}
     <div class="column is-wide">
