--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Travel Lovers</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <style> 
+      
+      </style>
     <!-- Link Bulma CSS -->
     <link
       rel='stylesheet'
@@ -58,7 +61,9 @@
       </nav>
     </header>
     <main>
+      <div class="body">
       {{{body}}}
+      </div>
     </main>
     <footer class='footer is-size-6-mobile'>
       <div class='content has-text-centered'>
