resized the login buttons

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,7 +44,7 @@
     </div>
     <br />
     <h6><b>Need to create account?</b>
-      <button id='create-account' class='btn-nav'><i
+      <button id='create-account' class='btn-login is-size-7-mobile is-size-7-desktop'><i
           class='icon-user pr-2'
         ></i>Click Here!</button></h6>
   </form>
