--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
             <div class="message-body">
                 <i class="icon-building"></i> <input name="citytxt" placeholder="City" type="text" id="candidate"/>
                     <br>
-                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker">
+                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker" class="hasDatepicker mt-2">
                     
                 <div id="btnSection">
                     <button id="button-1" onclick="addItem()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
@@ -44,7 +44,7 @@
             <div class="message-body">
                 <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate1"/>
                 <br>
-                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker1">
+                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker1" class="hasDatepicker mt-2">
                 <div id="btnSection">
                   <button onclick="addItem1()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                   <button onclick="removeItem1()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
@@ -64,7 +64,7 @@
             <div class="message-body">
                 <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate2"/>
                 <br>
-                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker2">
+                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker2" class="hasDatepicker mt-2">
                 <div id="btnSection"> 
                     <button onclick="addItem2()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                     <button onclick="removeItem2()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
