--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,9 +19,9 @@
         ></i>
             </div>
             <div class="message-body">
-                <i class="icon-building"></i> <input name="citytxt" placeholder="City" type="text" id="candidate"/>
+                <i class="icon-building"></i> <input name="citytxt" placeholder="City" type="text" id="candidate" class="mb-2"/>
                     <br>
-                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker" class="hasDatepicker mt-2">
+                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker">
                     
                 <div id="btnSection">
                     <button id="button-1" onclick="addItem()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
@@ -42,9 +42,9 @@
                 <p>Visiting</p><i class="icon-ticket"></i>
             </div>
             <div class="message-body">
-                <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate1"/>
+                <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate1" class="mb-2"/>
                 <br>
-                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker1" class="hasDatepicker mt-2">
+                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker1">
                 <div id="btnSection">
                   <button onclick="addItem1()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                   <button onclick="removeItem1()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
@@ -62,9 +62,9 @@
                 <p>Visited</p><i class="icon-plane"></i>
             </div>
             <div class="message-body">
-                <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate2"/>
+                <i class="icon-building"></i> <input placeholder="City" type="text" id="candidate2" class="mb-2"/>
                 <br>
-                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker2" class="hasDatepicker mt-2">
+                <i class="icon-calendar"></i> <input placeholder="Date" type="text" id="datepicker2">
                 <div id="btnSection"> 
                     <button onclick="addItem2()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                     <button onclick="removeItem2()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
