made the footer more responsive

--- a/public/sass/homepage.sass
+++ b/public/sass/homepage.sass
@@ -1,6 +1,7 @@
 /* HOMEPAGE STYLES */
 @use 'style'
 
+// File paths
 $assetPath: "/assets/images"
 
 main
@@ -12,3 +13,4 @@ main
     width: 100%
     min-height: 100%
     margin: 0 auto
+    
