--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -65,12 +65,12 @@
       {{{body}}}
       </div>
     </main>
-    <footer class='footer is-size-6-mobile'>
+    <footer class='footer is-size-6-mobile is-size-5-tablet is-size-4-desktop'>
       <div class='content has-text-centered'>
         Thanks for visiting!
       </div>
-      <div class='copyright is-size-6-mobile has-text-right'>
-        <h2>Made by Travel Lovers</h2>
+      <div class='copyright is-size-7-mobile is-size-6-tablet is-size-5-desktop has-text-right'>
+        Made by Travel Lovers
         <div>&copy; 2022 Travel Lovers, Inc.</div>
       </div>
     </footer>
