--- a/public/sass/dashboard.sass
+++ b/public/sass/dashboard.sass
@@ -6,6 +6,10 @@ $assetPath: "/assets/images"
 // Colors
 $amber: #ffaa4d
 $sky-blue: #2bd2ff
+$pink: #ff3399
+$light-green: #2bff88
+$light-blue: #85b9e9
+$white: #ffffff
 
 main
     background: url(#{$assetPath}/dashboard-image.png)
@@ -30,3 +34,16 @@ main
 
 #btnSection
   margin-top: 1.5vh
+
+.btn-dashboard
+  background-color: $pink
+  background-image: linear-gradient(45deg, $pink 0%, $light-green 52%, $light-blue 90%)
+  transition: all .5s ease-out
+  background-size: 1px 130px
+  background-position: 0 -10px
+  &:hover
+    background-position: 1px -50px
+    color: $white
+  text-align: center
+  display: flex
+  align-items: center
