made sure link to travel info worked on the dashboard page

--- a/public/sass/dashboard.sass
+++ b/public/sass/dashboard.sass
@@ -45,5 +45,4 @@ main
     background-position: 1px -50px
     color: $white
   text-align: center
-  display: flex
-  align-items: center
+  font-weight: bold
