error handling for the dashboard buttons

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -29,6 +29,7 @@
                 <div id="btnSection">
                     <button id="button-1" onclick="addItem()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                     <button id="button-2" onclick="removeItem()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
+                    <p class="error-text"></p>
                 </div>
                 <div>
                     <ul id="dynamic-list"></ul>
@@ -51,6 +52,7 @@
                 <div id="btnSection">
                   <button onclick="addItem1()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                   <button onclick="removeItem1()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
+                  <p class="error-text1"></p>
                 </div>
             
                 <ul id="dynamic-list1"></ul>
@@ -71,6 +73,7 @@
                 <div id="btnSection"> 
                     <button onclick="addItem2()" class="btn-add"><i class="icon-plus-sign-alt pr-1"></i>Add</button>
                     <button onclick="removeItem2()" class="btn-delete"><i class="icon-remove pr-1"></i>Remove</button>
+                    <p class="error-text2"></p>
                 </div>
             <div>
                 <ul id="dynamic-list2"></ul>
